force-app/main/default/objects/PT_productoProvisional__c/PT_productoProvisional__c.object-meta.xml
<CustomObject>
    <label>Producto Provisional</label>
    <nameField>
        <label>Producto Provisional</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos Provisionales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>