force-app/main/default/objects/PT_productoProvisional__c/fields/PT_descripcion__c.field-meta.xml
<CustomField>
    <fullName>PT_descripcion__c</fullName>
    <label>Descripcion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>