force-app/main/default/objects/PT_productoProvisional__c/fields/PT_estadoAprobacion__c.field-meta.xml
<CustomField>
    <fullName>PT_estadoAprobacion__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APR</fullName>
                <label>Aprobado</label>
            </value>
            <value>
                <fullName>PEND</fullName>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>RECH</fullName>
                <label>Rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>