force-app/main/default/objects/PT_productoProvisional__c/fields/PT_producto__c.field-meta.xml
<CustomField>
    <fullName>PT_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos Provisionales</relationshipLabel>
    <relationshipName>Productos_Provisionales</relationshipName>
    <type>Lookup</type>
</CustomField>