force-app/main/default/objects/PT_productoProvisional__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>PT_producto__c</columns>
    <columns>PT_codProducto__c</columns>
    <columns>PT_cantidad__c</columns>
    <columns>PT_fechaEnvio__c</columns>
    <columns>PT_almacenDestino__c</columns>
    <columns>PT_estadoAprobacion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>